--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,11 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <jetty.version>9.4.33.v20201020</jetty.version>
+        <jetty.version>9.4.46.v20220331</jetty.version>
+        <jetty_websocket.version>9.4.46.v20220331</jetty_websocket.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <powermock.version>1.7.4</powermock.version>
-        <mockito.version>1.10.19</mockito.version>
+        <powermock.version>2.0.9</powermock.version>
+        <mockito.version>3.12.2</mockito.version>
     </properties>
 
     <dependencies>
@@ -67,7 +68,7 @@
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-server</artifactId>
-            <version>${jetty.version}</version>
+            <version>${jetty_websocket.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
@@ -96,7 +97,7 @@
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
+            <artifactId>powermock-api-mockito2</artifactId>
             <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
@@ -121,7 +122,7 @@
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-client</artifactId>
-            <version>${jetty.version}</version>
+            <version>${jetty_websocket.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
